[package]
name = "actfast"
version = "1.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "actfast"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.28"
zip = { version = "8.6.0", features = ["deflate"], default-features = false }
chrono = "0.4.44"
bitreader = "0.3.11"

[dependencies.pyo3]
version = "0.28"
# "abi3-py310" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.10
features = ["abi3-py310"]

[dev-dependencies]
assert_approx_eq = "1.1.0"
proptest = "1.11.0"
